[tool.poetry]
name        = "vrelease-bin"
version     = "0.3.2"
description = "binary wrapper for vrelease - a kiss solution to easily create project releases"
authors     = ["Caian Ertl <hi@caian.org>"]
license     = "CC0-1.0"
homepage    = "https://github.com/vrelease/py-wrapper"
repository  = "https://github.com/vrelease/py-wrapper"
classifiers = [
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers

    "Environment :: Console",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication"
]

include = [
    "icon.svg",
    "LICENSE",
    "SHASUM512",
    "vrelease",
    "vrelease/bin/vrelease-linux",
    "vrelease/bin/vrelease-macos",
    "vrelease/bin/vrelease-windows.exe",
]

packages = [
    { include = "vrelease" }
]

[tool.poetry.scripts]
vrelease = "vrelease:main"

[tool.poetry.dependencies]
python = "^3.6.2"

[tool.poetry.dev-dependencies]
black      = "22.8.0"
jedi       = "0.18.1"
poethepoet = "0.13.1"
pylint     = "2.13.5"
requests   = "2.27.1"
toml       = "0.10.2"

[tool.poe.tasks]
"fix:style"   = "black -l 120 -S vrelease"
"check:lint"  = "pylint --fail-under 9 --rcfile .pylintrc --output-format colorized --verbose vrelease"
"check:style" = "black -l 120 -S --check vrelease"
"prepublish"  = "python pre-release-steps.py"

[build-system]
requires      = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
